svc.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: nagios
#   labels:
#     app: nagios
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#   selector:
#     app: nagios
#   type: ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  type: NodePort
  ports:
    - port: 80          # Service port
      targetPort: 80    # app container port
      protocol: TCP
      nodePort: 30091   # NodePort to expose
  selector:
    app: hello-world
